# traphill

./: .gitignore  main.py  pyproject.toml
src/traphill/: config.py  detection.py  main.py  types.py
test/: test_detection.py  test_main.py
