[project]
name = "traphill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics>=8.3.205",
    "click>=8.1.7",
    "scipy>=1.14.0",
    "lap>=0.5.12",
]

[project.scripts]
traphill = "traphill.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
